<resources>
    <string name="app_name">RichardBlanchard_Project2</string>
    <string name="title_activity_restaurant_detail">RestaurantDetailActivity</string>
    <string name="restDescription">RestaurantImage</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_rest_hint_name">Name</string>
    <string name="add_rest_hint_hours">Hours</string>
    <string name="add_rest_hint_address">Address</string>
    <string name="add_rest_hint_url">URL</string>
    <string name="add_rest_hint_phone_number">Phone Number</string>

    <string name="adddialog_title">Add Hero</string>
    <string name="add_rest">Add Restaraunt</string>

</resources>
