<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/editRestName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/add_rest_hint_name">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/editRestHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/add_rest_hint_hours">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/editRestAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/add_rest_hint_address">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/editRestURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/add_rest_hint_url">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/editRestPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/add_rest_hint_phone_number">
        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="Add Restaraunt" />
</LinearLayout>